# crux

./: .gitignore  Anchor.toml  package-lock.json  package.json
app/: config-overrides.js  openshelf.ts  package-lock.json  package.json
app/src/: App.js  idl.json  index.js
app/src/components/: BookForm.js  BookList.js  Layout.js  WalletConnection.js
app/src/contexts/: ProgramContext.js
app/src/utils/: anchor.js
frontend/: package-lock.json  package.json
frontend/app/: WalletSection.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/idl/: openshelf.json
frontend/app/types/: openshelf.ts
frontend/app/utils/: programUtils.ts
info/: idea.txt  structure.txt
programs/openshelf/: Cargo.toml
programs/openshelf/src/: book.rs  chapter.rs  doc.txt  errors.rs  lib.rs  nft.rs  purchase.rs  purchase_idiomatic.rs  stake.rs  state.rs
tests/: add_book.ts  add_chapter.ts  claim_earnings.ts  fetch_info.ts  filter_books.ts  index.ts  nft.ts  openshelf.js  openshelf.ts  purchase_chapter.ts  purchase_full_book.ts  setup.ts  stake_on_book.ts  structure.json  verify_readers_and_stakes.ts
